main page meme card mostly complete - need to fix username alignment

--- a/laughfactory/static/css/style.css
+++ b/laughfactory/static/css/style.css
@@ -188,12 +188,48 @@ h2 {
   margin-top: 4em;
   height: auto;
   width: 35em;
-  padding-top: 5em;
-  padding-bottom: 10em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .meme {
   width: 100%;
+}
+
+img {
+  background-color: #FFCE5C;
+  color: #FFCE5C;
+}
+
+.emoji {
+  height: 1.5em;
+  width: auto;
+}
+
+.user {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 1em;
+}
+
+.comments {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.reactions-container {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin-top: 1em;
+}
+
+.user-container {
+  display: flex;
+  justify-content: flex-start;
 }
 
 body {
