--- a/laughfactory/static/scss/main.scss
+++ b/laughfactory/static/scss/main.scss
@@ -1,12 +1,13 @@
 @import "./card.scss";
+@import "./variables.scss";
 
 
 .main-card{
     @include card{
         height: auto;
         width: 35em;
-        padding-top: 5em;
-        padding-bottom: 10em;
+        padding-top: 1em;
+        padding-bottom: 1em;
     }
 }
 
@@ -15,3 +16,39 @@
     width: 100%;
 }
 
+img{
+    background-color: $main-color;
+    color: $main-color;
+}
+
+.emoji{
+    height:1.5em;
+    width: auto;
+}
+
+.user{
+    font-family: $font-style;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 1em;
+}
+
+.comments{
+    font-family: $font-style;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.reactions-container{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin-top: 1em;
+}
+
+.user-container{
+    display:flex;
+    justify-content: flex-start;
+    width: 90%;
+}
